<resources>
    <string name="app_name" translatable="false">RecipesApp</string>
    <string name="title_category">Categories</string>
    <string name="favourites">Favourites</string>
    <string name="image_of_categories">Image of categories</string>
    <string name="image_of_recipe">Image of recipe</string>
    <string name="icon_heart">Icon heart</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_cooking_method">Cooking method</string>
    <string name="position_in_method" translatable="false">%1$d. %2$s</string>
    <string name="ingredient_quantity" translatable="false">%1$s</string>
    <string name="ingredient_quantity_unitOfMeasure" translatable="false">%1$s %2$s</string>
    <string name="subtitle_portions">Portions:</string>
    <string name="image_of_favorites">Image of favorites</string>
    <string name="title_favorites">Favorites</string>
    <string name="empty_recycler_favorites">You have not added any recipes to your favorites yet</string>
    <string name="error_receiving_data">Error receiving data</string>
</resources>